--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,11 @@
 {
-  "files": [],
-  "references": [
-    {
-      "path": "./tsconfig.node.json"
-    },
-    {
-      "path": "./tsconfig.app.json"
-    },
-    {
-      "path": "./tsconfig.vitest.json"
-    }
-  ],
   "compilerOptions": {
-    "isolatedModules": true,
-    "verbatimModuleSyntax": true,
-    "noImplicitAny": true,
-    "strict": true
+    "target": "ES2022",
+    "module": "Preserve",
+    "moduleResolution": "bundler",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "strict": true,
+    "skipLibCheck": true
   }
 }
