--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     ".": "./dist/lib.js",
     "./*": "./src/*"
   },
-  "files": [
-    "README.md",
-    "dist"
-  ],
+  "files": ["README.md", "dist"],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/bjornharrtell/json-api.git"
@@ -26,12 +23,12 @@
     "typedoc": "typedoc"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.2.5",
-    "@types/node": "^24.7.1",
-    "typedoc": "^0.28.13",
+    "@biomejs/biome": "2.3.6",
+    "@types/node": "^24.10.1",
+    "typedoc": "^0.28.14",
     "typescript": "~5.9.3",
-    "vite": "^7.1.9",
+    "vite": "^7.2.4",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^3.2.4"
+    "vitest": "^4.0.11"
   }
 }
