--- a/package.json
+++ b/package.json
@@ -17,18 +17,19 @@
   "scripts": {
     "dev": "vite",
     "test": "vitest",
+    "test:integration": "vitest run tests/integration/jsonapi-dotnetcore.spec.ts",
     "build": "vite build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
     "typedoc": "typedoc"
   },
   "devDependencies": {
-    "@biomejs/biome": "2.3.11",
-    "@types/node": "^25.0.9",
-    "typedoc": "^0.28.16",
+    "@biomejs/biome": "2.4.4",
+    "@types/node": "^25.3.0",
+    "typedoc": "^0.28.17",
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
     "vite-plugin-dts": "^4.5.4",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.18"
   }
 }
