--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "dev": "vite",
     "test": "vitest",
     "test:integration": "vitest run tests/integration/jsonapi-dotnetcore.spec.ts",
+    "test:coverage": "vitest run --coverage",
+    "test:integration:coverage": "vitest run --coverage tests/integration/jsonapi-dotnetcore.spec.ts",
+    "coverage": "vitest run --coverage && vitest run --coverage tests/integration/jsonapi-dotnetcore.spec.ts",
+    "coveralls": "pnpm run coverage && cat ./coverage/lcov.info | coveralls",
     "build": "vite build",
     "preview": "vite preview",
     "type-check": "tsc --noEmit",
@@ -26,6 +30,8 @@
   "devDependencies": {
     "@biomejs/biome": "2.4.4",
     "@types/node": "^25.3.0",
+    "@vitest/coverage-v8": "^4.0.18",
+    "coveralls": "^3.1.1",
     "typedoc": "^0.28.17",
     "typescript": "~5.9.3",
     "vite": "^7.3.1",
